check_err.txt
   Compiling syn v2.0.116
    Checking windows-sys v0.60.2
    Checking terminal_size v0.4.3
   Compiling serde_derive v1.0.228
   Compiling thiserror-impl v1.0.69
   Compiling miette-derive v7.6.0
    Checking thiserror v1.0.69
    Checking miette v7.6.0
    Checking serde v1.0.228
    Checking vox-ast v0.1.0 (C:\Users\Owner\vox\crates\vox-ast)
    Checking vox-hir v0.1.0 (C:\Users\Owner\vox\crates\vox-hir)
    Checking vox-typeck v0.1.0 (C:\Users\Owner\vox\crates\vox-typeck)
error[E0599]: no method named `lookup_var` found for reference `&'a BuiltinTypes` in the current scope
   --> crates\vox-typeck\src\checker.rs:374:56
    |
374 |                 } else if let Some(ty) = self.builtins.lookup_var(name) {
    |                                                        ^^^^^^^^^^ method not found in `&'a BuiltinTypes`

error[E0599]: no method named `lookup_var` found for reference `&BuiltinTypes` in the current scope
  --> crates\vox-typeck\src\infer.rs:14:46
   |
14 |         Expr::Ident { name, .. } => builtins.lookup_var(name).unwrap_or_else(|| ctx.fresh_var()),
   |                                              ^^^^^^^^^^ method not found in `&BuiltinTypes`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `vox-typeck` (lib) due to 2 previous errors
